# pmpktn-tui

./: .gitignore  Cargo.toml
db/: create_db.sql  insert_patient.sql  listing.sql
src/: app.rs  cli.rs  lib.rs  main.rs  sql.rs  tui.rs
tests/: sqlx_test.rs
