[package]
name = "pmpktn-tui"
version = "0.1.0"
edition = "2021"
description = "phần mềm phòng khám đơn giản trên terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["cargo"] }
crossterm = "0.23.2"
tui = "0.18.0"
