[package]
name = "pmpktn-tui"
version = "0.1.0"
edition = "2021"
description = "phần mềm phòng khám đơn giản trên terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.17", features = ["cargo"] }
crossterm = "0.23.2"
home = "0.5.3"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.18.2", features = ["full"] }
tui = "0.18.0"
